# seashell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
default_files/: .seashell_completions  .seashell_hints
embedfile/: embedfile.c
include/: alias.h  apt_repos.h  bookmark.h  builtins.h  commands.h  completions.h  defs.h  expression.h  hints.h  job.h  mymap.h  mystring.h  myvec.h  networking.h  parser.h  pipeline.h  rcfile.h  readline.h  signals.h  subprocess.h  tests.h  utils.h
shhhhhhhhh/: jumper.c  jumper.h
src/: alias.c  apt_repos.c  bookmark.c  builtins.c  commands.c  completions.c.in  expression.c  hints.c.in  job.c  main.c  mymap.c  mystring.c  myvec.c  networking.c  parser.c  pipeline.c  rcfile.c  readline.c  readline.c.in  signals.c  subprocess.c  tests.c  tests.c.in  utils.c
